--- a/style.css
+++ b/style.css
@@ -81,25 +81,86 @@ header{
     display: flex;
     justify-content: center;
     background-color: rgb(140, 50, 35);
-    gap: 15px;
+    gap: 50px; 
 }
 .nav-link{
-    margin: 0 15px;
+    margin: 0;
     text-decoration: none;
     Color: black;
     font-size: 35px;
     padding: 8px 15px;
-    border: 2px solid rgb(140, 50, 35);
+    border: 5px solid rgb(140, 50, 35);
     background-color: rgb(171, 59, 40);
     border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+    display: inline-block;
 }
 
 .nav-link:hover{
     background-color: rgb(140, 50, 35);
     transform: scale(1.05);
 }
+
+.dropdown {
+    position: relative;
+    
+    
+}
+
+.dropdown-menu {
+    
+    position: absolute;
+    background-color: rgb(171, 59, 40);
+    width: 82px;
+    text-align: left;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    list-style: none;
+    overflow: hidden;
+    transform: translateY(-120px);
+    /* visibility: hidden; */
+    opacity: 100;
+    left: 5px;
+    transition: transform 0.3s ease, opacity 0.7s ease 0.05s;
+    top: 100%;
+    pointer-events: none;
+    
+}
+
+.dropdown-menu li {
+    padding-left: 10px 0px 10px 10px;
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    text-align: left;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.dropdown-menu li a{
+    color: black;
+    text-decoration: none;
+    text-align: left;
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+.dropdown:hover .dropdown-menu, .dropdown-menu:hover{
+    transform:translateY(0);
+    opacity: 1;
+    z-index: 10;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.dropdown:not(:hover) .dropdown-menu{
+    transition: none;
+    
+}
+
+
+
 
 footer{
     text-align: center;
