--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 body{
     background-color: rgb(171, 59, 40);
    /* background-image: url('Me_75x75_spaced.png') ; */
@@ -78,10 +85,10 @@ header{
 }*/
 
 .navbar{
-    display: flex;
-    justify-content: center;
+    
     background-color: rgb(140, 50, 35);
     gap: 50px; 
+    position: relative;
 }
 .nav-link{
     margin: 0;
@@ -103,7 +110,7 @@ header{
 
 .dropdown {
     position: relative;
-    
+    display: inline-block;
     
 }
 
@@ -111,24 +118,23 @@ header{
     
     position: absolute;
     background-color: rgb(171, 59, 40);
-    width: 82px;
+    min-width: 120px; /* 92% */
     text-align: left;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
-    z-index: 2;
+    z-index: 100;
     list-style: none;
     overflow: hidden;
     transform: translateY(-120px);
-    /* visibility: hidden; */
-    opacity: 100;
+    visibility: hidden;
+    opacity: 0;
     left: 5px;
     transition: transform 0.3s ease, opacity 0.7s ease 0.05s;
-    top: 100%;
-    pointer-events: none;
+    padding:0;
     
 }
 
 .dropdown-menu li {
-    padding-left: 10px 0px 10px 10px;
+    padding-left: 0;
     text-decoration: none;
     color: black;
     font-size: 20px;
@@ -141,13 +147,13 @@ header{
     color: black;
     text-decoration: none;
     text-align: left;
-    display: flex;
-    justify-content: flex-start;
+    display: block;
+    padding-left: 0;
     
 }
 
-.dropdown:hover .dropdown-menu, .dropdown-menu:hover{
-    transform:translateY(0);
+.dropdown:hover .dropdown-menu, .dropdown > .dropdown-menu:hover{
+    transform:translateY(0px);
     opacity: 1;
     z-index: 10;
     visibility: visible;
@@ -156,6 +162,17 @@ header{
 
 .dropdown:not(:hover) .dropdown-menu{
     transition: none;
+    
+}
+
+.dropdown::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    pointer-events: auto;
     
 }
 
@@ -173,8 +190,8 @@ footer{
 }
 
 #staring_cat{
-   position: static;
-   display: inline-block;
+    position: static;
+    display: inline-block;
     width: 100px;
     top: 20px;
     left: 320px; 
